Added tests for TenPinBowlingGame, added more tests scenarios.